# amd-hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  build_and_push.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml
local_test/input/: tasks.json
models/: .gitkeep
src/: __init__.py  app.py  classifier.py  compressor.py  graph.py  local_model.py  main.py  prompts.py  router.py  token_counter.py  validator.py
