# =============================================================================
# pyproject.toml - AMD Hackathon Track 1 Agent
# =============================================================================
# Modern Python project config. Replaces requirements.txt.
# Install: pip install .          (production)
#          pip install -e ".[dev]" (local dev with extras)
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amd-track1-agent"
version = "1.0.0"
description = "Token-efficient general-purpose AI agent for AMD Hackathon Track 1"
requires-python = ">=3.11"

dependencies = [
    # -- Orchestration ----------------------------------------------------------
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",

    # -- Fireworks API (OpenAI-compatible) --------------------------------------
    "openai>=1.40.0",

    # -- Token counting ---------------------------------------------------------
    "tiktoken>=0.7.0",

    # -- Web server (health endpoint + async task runner) ----------------------
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # -- Utilities -------------------------------------------------------------
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Local GGUF inference - compiled from source in Dockerfile (CPU-only)
# Not listed as a hard dep so `pip install .` works without build tools
local-model = [
    "llama-cpp-python>=0.2.90",
]

dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",          # FastAPI test client
    "ruff>=0.4.0",            # linting
]

[project.scripts]
# CLI entry point (alternative to `python -m src.main`)
amd-agent = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# -- Ruff (linting) -------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

# -- pytest ---------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
