# =============================================================================
# pyproject.toml - AMD Hackathon Track 1 Agent
# =============================================================================
# Modern Python project config. Replaces requirements.txt.
# Install: pip install .          (production)
#          pip install -e ".[dev]" (local dev with extras)
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amd-track1-agent"
version = "1.0.0"
description = "Token-efficient general-purpose AI agent for AMD Hackathon Track 1"
requires-python = ">=3.11"

dependencies = [
    # -- Orchestration ----------------------------------------------------------
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",

    # -- Fireworks API (OpenAI-compatible) --------------------------------------
    "openai>=1.40.0",

    # -- Token counting ---------------------------------------------------------
    "tiktoken>=0.7.0",

    # -- Local HF inference (replaces llama-cpp-python) ------------------------
    # transformers: model loading + generation
    # torch (CPU): required by transformers; CPU-only build ~800MB wheel
    # accelerate: enables low_cpu_mem_usage=True in from_pretrained
    "transformers>=4.42.0",
    "accelerate>=0.30.0",
    "torch>=2.2.0",

    # -- Web server (health endpoint + async task runner) ----------------------
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # -- Utilities -------------------------------------------------------------
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",          # FastAPI test client
    "ruff>=0.4.0",            # linting
    "pymupdf>=1.24.0",        # PDF parsing (dev only)
]

[project.scripts]
# CLI entry point (alternative to `python -m src.main`)
amd-agent = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# -- Ruff (linting) -------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

# -- pytest ---------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
